Rework permissions and translations
